# text-clean

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt  run.py
tests/: __init__.py  test_ai.py  test_pipeline.py  test_splitter.py
voxtext/: __init__.py  app.py  text_splitter.py
voxtext/ai/: __init__.py  corrector.py  providers.py
voxtext/config/: __init__.py  abbreviations.py  settings.py
voxtext/exporters/: __init__.py  base.py  json_exporter.py  ssml_exporter.py  txt_exporter.py
voxtext/gui/: __init__.py  dialogs.py  editor_panel.py  main_window.py  toolbar.py
voxtext/models/: __init__.py  document.py
voxtext/pipeline/: __init__.py  base.py  cleaner.py  normalizer.py  parser.py  segmenter.py  semantic_engine.py  tts_optimizer.py
