[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voxtext-engine"
version = "1.0.0"
description = "Sistema de organização de texto para TTS — transforma textos brutos em versões otimizadas para síntese de fala."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VoxText Team"}
]

dependencies = [
    "pdfplumber>=0.10.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "num2words>=0.5.13",
    "ttkbootstrap>=1.10.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
voxtext = "run:main"

[tool.setuptools.packages.find]
include = ["voxtext*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
